src/objects/ThingPark_Invoice_Configuration__mdt.object
<CustomObject>
    <description>Information Common to all ThingPark invoices</description>
    <fields>
        <fullName>Devices_line__c</fullName>
        <label>Devices line</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messages_line__c</fullName>
        <description>Messages charging line</description>
        <label>Messages line</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage_line__c</fullName>
        <label>Overage line</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_line__c</fullName>
        <description>Template for the Invoice service line</description>
        <label>Service line</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>ThingPark Invoice Configuration</label>
    <pluralLabel>ThingPark Invoices Configuration</pluralLabel>
</CustomObject>